Fix Compose UI test suite across all platforms and support Robolectric SDK 37